Implement, document, and test \peek_regex_replace_once:nnTF

--- a/l3kernel/l3token.dtx
+++ b/l3kernel/l3token.dtx
@@ -1064,8 +1064,8 @@
 %   \meta{regex}.  If the test is true, the \meta{tokens} are removed
 %   from the input stream and the \meta{true code} is inserted, while if
 %   the test is false, the \meta{false code} is inserted followed by the
-%   \meta{tokens} that have been read in the process of matching the
-%   \meta{regex}.  See \pkg{l3regex} for documentation of the syntax of
+%   \meta{tokens} that were originally in the input stream.
+%   See \pkg{l3regex} for documentation of the syntax of
 %   regular expressions.  The \meta{regular expression} is implicitly
 %   anchored at the start, so for instance
 %   \cs{peek_regex_remove:nTF}~|{|~|a|~|}| is essentially equivalent to
@@ -1074,6 +1074,32 @@
 %     Implicit character tokens are correctly considered by
 %     \cs{peek_regex_remove:nTF} as control sequences, while functions
 %     that inspect individual tokens (for instance
+%     \cs{peek_charcode:NTF}) only take into account their meaning.
+%   \end{texnote}
+% \end{function}
+%
+% \begin{function}[added = 2020-07-23, noTF]
+%   {\peek_regex_replace_once:nn, \peek_regex_replace_once:Nn}
+%   \begin{syntax}
+%     \cs{peek_regex_replace_once:nnTF} \Arg{regex} \Arg{replacement} \Arg{true code} \Arg{false code}
+%   \end{syntax}
+%   If the \meta{tokens} that follow in the input stream match the
+%   \meta{regex}, replaces them according to the \meta{replacement} as
+%   for \cs{regex_replace_once:nnN}, and leaves the result in the input
+%   stream, after the \meta{true code}.  Otherwise, leaves \meta{false
+%   code} followed by the \meta{tokens} that were originally in the
+%   input stream, with no modifications.  See \pkg{l3regex} for
+%   documentation of the syntax of regular expressions and of the
+%   \meta{replacement}: for instance |\0| in the \meta{replacement} is
+%   replaced by the tokens that were matched in the input stream.  The
+%   \meta{regular expression} is implicitly anchored at the start.  In
+%   contrast to \cs{regex_replace_once:nnN}, no error arises if the
+%   \meta{replacement} leads to an unbalanced token list: the tokens are
+%   inserted into the input stream without issue.
+%   \begin{texnote}
+%     Implicit character tokens are correctly considered by
+%     \cs{peek_regex_replace_once:nnTF} as control sequences, while
+%     functions that inspect individual tokens (for instance
 %     \cs{peek_charcode:NTF}) only take into account their meaning.
 %   \end{texnote}
 % \end{function}
