--- a/l3kernel/l3token.dtx
+++ b/l3kernel/l3token.dtx
@@ -1056,9 +1056,9 @@
 % \end{function}
 %
 % \begin{function}[added = 2020-07-20, TF]
-%   {\peek_regex_remove:n, \peek_regex_remove:N}
+%   {\peek_regex_remove_once:n, \peek_regex_remove_once:N}
 %   \begin{syntax}
-%     \cs{peek_regex_remove:nTF} \Arg{regex} \Arg{true code} \Arg{false code}
+%     \cs{peek_regex_remove_once:nTF} \Arg{regex} \Arg{true code} \Arg{false code}
 %   \end{syntax}
 %   Tests if the \meta{tokens} that follow in the input stream match the
 %   \meta{regex}.  If the test is true, the \meta{tokens} are removed
@@ -1068,11 +1068,11 @@
 %   See \pkg{l3regex} for documentation of the syntax of
 %   regular expressions.  The \meta{regular expression} is implicitly
 %   anchored at the start, so for instance
-%   \cs{peek_regex_remove:nTF}~|{|~|a|~|}| is essentially equivalent to
+%   \cs{peek_regex_remove_once:nTF}~|{|~|a|~|}| is essentially equivalent to
 %   \cs{peek_charcode_remove:NTF}~|a|.
 %   \begin{texnote}
 %     Implicit character tokens are correctly considered by
-%     \cs{peek_regex_remove:nTF} as control sequences, while functions
+%     \cs{peek_regex_remove_once:nTF} as control sequences, while functions
 %     that inspect individual tokens (for instance
 %     \cs{peek_charcode:NTF}) only take into account their meaning.
 %   \end{texnote}
