Add kernel critical messages for later

--- a/l3kernel/l3msg.dtx
+++ b/l3kernel/l3msg.dtx
@@ -1656,23 +1656,32 @@
 %
 % \begin{macro}
 %   {
-%     \__kernel_msg_fatal:nnnnnn ,
-%     \__kernel_msg_fatal:nnnnn  ,
-%     \__kernel_msg_fatal:nnnn   ,
-%     \__kernel_msg_fatal:nnn    ,
-%     \__kernel_msg_fatal:nn     ,
-%     \__kernel_msg_fatal:nnxxxx ,
-%     \__kernel_msg_fatal:nnxxx  ,
-%     \__kernel_msg_fatal:nnxx   ,
-%     \__kernel_msg_fatal:nnx    ,
-%     \__kernel_msg_error:nnnnnn ,
-%     \__kernel_msg_error:nnnnn  ,
-%     \__kernel_msg_error:nnnn   ,
-%     \__kernel_msg_error:nnn    ,
-%     \__kernel_msg_error:nn     ,
-%     \__kernel_msg_error:nnxxxx ,
-%     \__kernel_msg_error:nnxxx  ,
-%     \__kernel_msg_error:nnxx   ,
+%     \__kernel_msg_fatal:nnnnnn    ,
+%     \__kernel_msg_fatal:nnnnn     ,
+%     \__kernel_msg_fatal:nnnn      ,
+%     \__kernel_msg_fatal:nnn       ,
+%     \__kernel_msg_fatal:nn        ,
+%     \__kernel_msg_fatal:nnxxxx    ,
+%     \__kernel_msg_fatal:nnxxx     ,
+%     \__kernel_msg_fatal:nnxx      ,
+%     \__kernel_msg_fatal:nnx       ,
+%     \__kernel_msg_critical:nnnnnn ,
+%     \__kernel_msg_critical:nnnnn  ,
+%     \__kernel_msg_critical:nnnn   ,
+%     \__kernel_msg_critical:nnn    ,
+%     \__kernel_msg_critical:nn     ,
+%     \__kernel_msg_critical:nnxxxx ,
+%     \__kernel_msg_critical:nnxxx  ,
+%     \__kernel_msg_critical:nnxx   ,
+%     \__kernel_msg_critical:nnx    ,
+%     \__kernel_msg_error:nnnnnn    ,
+%     \__kernel_msg_error:nnnnn     ,
+%     \__kernel_msg_error:nnnn      ,
+%     \__kernel_msg_error:nnn       ,
+%     \__kernel_msg_error:nn        ,
+%     \__kernel_msg_error:nnxxxx    ,
+%     \__kernel_msg_error:nnxxx     ,
+%     \__kernel_msg_error:nnxx      ,
 %     \__kernel_msg_error:nnx
 %   }
 %   Neither fatal kernel errors nor kernel errors can be redirected.  We
@@ -1682,6 +1691,7 @@
 %   errors.
 %    \begin{macrocode}
   \@@_kernel_class_new:nN { fatal } \@@_fatal_code:nnnnnn
+  \@@_kernel_class_new:nN { critical } \@@_critical_code:nnnnnn
   \cs_undefine:N \__kernel_msg_error:nnxx
   \cs_undefine:N \__kernel_msg_error:nnx
   \cs_undefine:N \__kernel_msg_error:nn
