Update 'pickup' code for per-separation model approach

--- a/l3backend/l3backend-color.dtx
+++ b/l3backend/l3backend-color.dtx
@@ -90,8 +90,8 @@
           {
             \tl_set:Nx #1
                {
-                 { spot }
-                 { \exp_after:wN \use:n \current@color \c_space_tl 1 }
+                 { \exp_after:wN \use:n \current@color }
+                 { 1 }
                }
           }
           {
@@ -187,7 +187,7 @@
                    {
                      \str_if_eq:nnTF {#2} { cs }
                        {
-                         \tl_set:Nx #7 { { spot } { \use_none:n #1 ~ #5 } }
+                         \tl_set:Nx #7 { { \use:n #1 } { #5 } }
                        }
                        {
                          \tl_set:Nn #7 { { gray } { 0 } }
