Correct section level and typos

--- a/l3kernel/l3sys.dtx
+++ b/l3kernel/l3sys.dtx
@@ -252,7 +252,7 @@
 %   Execute \meta{tokens} through shell escape at shipout.
 % \end{function}
 %
-% \subsection{Loading configuration data}
+% \section{Loading configuration data}
 %
 % \begin{function}[added = 2019-09-12]{\sys_load_backend:n}
 %   \begin{syntax}
@@ -277,7 +277,7 @@
 %   back deprecations, respectively.
 % \end{function}
 %
-% \subsection{Final settins}
+% \subsection{Final settings}
 %
 % \begin{function}[added = 2019-10-06]{\sys_finalise:}
 %   \begin{syntax}
