Document \c__kernel_expl_date_tl and 50bf12d

--- a/l3kernel/l3kernel-functions.dtx
+++ b/l3kernel/l3kernel-functions.dtx
@@ -101,6 +101,15 @@
 %   the \meta{follow-on}.
 % \end{function}
 %
+% \begin{function}{\__kernel_dependency_version_check:Nn}
+%   \begin{syntax}
+%     \cs{__kernel_dependency_version_check:Nn} \Arg{\cs{release}} \Arg{file}
+%   \end{syntax}
+%   Checks if the \meta{file}, dated \meta{release} has the same release date as
+%   the \pkg{l3kernel} preloaded in \LaTeXe{}.  If the dates don't match, the
+%   loading of \meta{file} is aborted and an error is raised.
+% \end{function}
+%
 % \begin{function}{\__kernel_deprecation_code:nn}
 %   \begin{syntax}
 %     \cs{__kernel_deprecation_code:nn} \Arg{error code} \Arg{working code}
@@ -123,6 +132,11 @@
 %   A boolean which records the current code syntax status: \texttt{true} if
 %   currently inside a code environment. This variable should only be
 %   set by \cs{ExplSyntaxOn}/\cs{ExplSyntaxOff}.
+% \end{variable}
+%
+% \begin{variable}{\c__kernel_expl_date_tl}
+%   A token list containing the release date of the \pkg{l3kernel} preloaded
+%   in \LaTeXe{} used to check if dependencies match.
 % \end{variable}
 %
 % \begin{function}{\__kernel_file_missing:n}
