--- a/l3kernel/l3candidates.dtx
+++ b/l3kernel/l3candidates.dtx
@@ -206,7 +206,7 @@
 %
 % \begin{function}[added = 2019-05-08]{\ior_shell_open:Nn}
 %   \begin{syntax}
-%     \cs{ior_shell_open:nN} \meta{stream} \Arg{shell~command}
+%     \cs{ior_shell_open:Nn} \meta{stream} \Arg{shell~command}
 %   \end{syntax}
 %   Opens the \emph{pseudo}-file created by the output of the
 %   \meta{shell command} for reading using \meta{stream} as the
