faster keys_trim_spaces

--- a/l3kernel/l3keys.dtx
+++ b/l3kernel/l3keys.dtx
@@ -1493,9 +1493,11 @@
 %
 % \subsubsection{Internal auxiliaries}
 %
-% \begin{variable}{\s_@@_stop}
+% \begin{variable}{\s_@@_nil,\s_@@_mark,\s_@@_stop}
 %   Internal scan marks.
 %    \begin{macrocode}
+\scan_new:N \s_@@_nil
+\scan_new:N \s_@@_mark
 \scan_new:N \s_@@_stop
 %    \end{macrocode}
 % \end{variable}
@@ -2974,29 +2976,43 @@
 %     \@@_trim_spaces_auxiii:w
 %   }
 %   Space stripping has to allow for the fact that the key here might have
-%   several parts, and spaces need to be stripped from each part.
+%   several parts, and spaces need to be stripped from each part. Since the key
+%   name is turned into a string groups can't be stripped accidentally and the
+%   precautions of \cs{tl_trim_spaces:n} aren't necessary, in this case it is
+%   much faster to just directly strip spaces around |/|.
 %    \begin{macrocode}
-\cs_new:Npn \@@_trim_spaces:n #1
+\group_begin:
+  \cs_set:Npn \@@_tmp:n #1
+    {
+      \cs_new:Npn \@@_trim_spaces:n ##1
+        {
+          \exp_after:wN \@@_trim_spaces_auxi:w \tl_to_str:n { / ##1 } /
+            \s_@@_nil  \@@_trim_spaces_auxi:w
+            \s_@@_mark \@@_trim_spaces_auxii:w
+            #1 / #1
+            \s_@@_nil  \@@_trim_spaces_auxii:w
+            \s_@@_mark \@@_trim_spaces_auxiii:w
+        }
+    }
+  \@@_tmp:n { ~ }
+\group_end:
+\cs_new:Npn \@@_trim_spaces_auxi:w #1 ~ / #2 \s_@@_nil #3
   {
-    \exp_after:wN \@@_trim_spaces_auxi:w \tl_to_str:n {#1}
-      / \q_@@_nil \s_@@_stop
+    #3 #1 / #2 \s_@@_nil #3
   }
-\cs_new:Npn \@@_trim_spaces_auxi:w #1 / #2 \s_@@_stop
+\cs_new:Npn \@@_trim_spaces_auxii:w #1 / ~ #2 \s_@@_mark #3
   {
-    \@@_quark_if_nil:nTF {#2}
-      { \tl_trim_spaces:n {#1} }
-      { \@@_trim_spaces_auxii:w #1 / #2 }
+    #3 #1 / #2 \s_@@_mark #3
   }
-\cs_new:Npn \@@_trim_spaces_auxii:w #1 / #2 / \q_@@_nil
+\cs_new:Npn \@@_trim_spaces_auxiii:w
+    / #1 /
+    \s_@@_nil  \@@_trim_spaces_auxi:w
+    \s_@@_mark \@@_trim_spaces_auxii:w
+    /
+    \s_@@_nil  \@@_trim_spaces_auxii:w
+    \s_@@_mark \@@_trim_spaces_auxiii:w
   {
-    \tl_trim_spaces:n {#1}
-    \@@_trim_spaces_auxiii:w #2 / \q_@@_recursion_tail / \q_@@_recursion_stop
-  }
-\cs_set:Npn \@@_trim_spaces_auxiii:w #1 /
-  {
-    \@@_if_recursion_tail_stop:n {#1}
-    / \tl_trim_spaces:n { #1 }
-    \@@_trim_spaces_auxiii:w
+    #1
   }
 %    \end{macrocode}
 % \end{macro}
