remove unused quarks

--- a/l3kernel/l3keys.dtx
+++ b/l3kernel/l3keys.dtx
@@ -1502,34 +1502,17 @@
 %    \end{macrocode}
 % \end{variable}
 %
-% \begin{variable}{\q_@@_nil,\q_@@_no_value}
+% \begin{variable}{\q_@@_no_value}
 %   Internal quarks.
 %    \begin{macrocode}
-\quark_new:N \q_@@_nil
 \quark_new:N \q_@@_no_value
 %    \end{macrocode}
 % \end{variable}
 %
-% \begin{macro}[pTF]{\@@_quark_if_nil:n}
+% \begin{macro}[pTF]{\@@_quark_if_no_value:N}
 %   Branching quark conditional.
 %    \begin{macrocode}
-\__kernel_quark_new_conditional:Nn \@@_quark_if_nil:n { TF }
 \__kernel_quark_new_conditional:Nn \@@_quark_if_no_value:N { TF }
-%    \end{macrocode}
-% \end{macro}
-%
-% \begin{variable}{\q_@@_recursion_tail,\q_@@_recursion_stop}
-%   Internal recursion quarks.
-%    \begin{macrocode}
-\quark_new:N \q_@@_recursion_tail
-\quark_new:N \q_@@_recursion_stop
-%    \end{macrocode}
-% \end{variable}
-%
-% \begin{macro}[EXP]{\@@_if_recursion_tail_stop:n}
-%   Functions to query recursion quarks.
-%    \begin{macrocode}
-\__kernel_quark_new_test:N \@@_if_recursion_tail_stop:n
 %    \end{macrocode}
 % \end{macro}
 %
