Define kernel date on the fly in package mode

--- a/l3kernel/expl3.dtx
+++ b/l3kernel/expl3.dtx
@@ -1271,8 +1271,11 @@
   \ifodd\csname\detokenize{l__kernel_expl_bool}\endcsname
 %    \end{macrocode}
 %   In package mode all files are loaded in one go, so versions will
-%   match, so nothing has to be done.
+%   match.  We just have to set \cs{c__kernel_expl_date_tl} so that
+%   further dependencies don't break:
 %    \begin{macrocode}
+    \global\expandafter\let\csname\detokenize
+      {c__kernel_expl_date_tl}\endcsname\ExplLoaderFileDate
     \expandafter\expandafter
     \expandafter\@gobble
   \else
