Update expl3.pdf somewhat
We probably need a more thorough overhaul here.

--- a/l3kernel/expl3.dtx
+++ b/l3kernel/expl3.dtx
@@ -798,16 +798,14 @@
 %
 % \section{The distribution}
 %
-% At present, the \pkg{expl3} modules are designed to be loaded on top
-% of \LaTeXe{}. In time, a \LaTeX3 format may be produced based on this
-% code.
+% The \pkg{expl3} modules are designed to be loaded on top of \LaTeXe{}.
 %
 % \begin{bfseries}
-%   While \pkg{expl3} is still experimental, the bundle is now regarded
-%   as broadly stable. The syntax conventions and functions provided
+%   The core \pkg{expl3} language is broadly stable, and thus
+%   the syntax conventions and functions provided
 %   are now ready for wider use. There may still be changes to some
 %   functions, but these will be minor when compared to the scope of
-%   \pkg{expl3}.
+%   \pkg{expl3}. A robust mechanism is in place for such deprecations.
 % \end{bfseries}
 %
 % The distribution of \pkg{expl3} is split up into three packages on
@@ -821,7 +819,9 @@
 % and any changes in this code are very limited. This material is
 % therefore suitable for use in third-party packages without concern
 % about changes in support. All of this code is documented in
-% \texttt{interface3.pdf}.
+% \texttt{interface3.pdf}. With an up-to-date \LaTeXe{} kernel, this
+% code is built into the format file and therefore can be used
+% without any further steps.
 %
 % The material in \pkg{l3packages} is also stable, but is not always
 % at a programming level: most notably, \pkg{xparse} is stable and
@@ -834,9 +834,9 @@
 % in terms of interface and functionality detail. Feedback on these
 % modules is extremely valuable.
 %
-% \section{Moving from \LaTeXe{} to \LaTeX3}
+% \section{Moving from \LaTeXe{} to \pkg{expl3}}
 %
-% To help programmers to use \LaTeX3 code in existing \LaTeXe{} package,
+% To help programmers to use \pkg{expl3} code in existing \LaTeXe{} package,
 % some short notes on making the change are probably desirable.
 % Suggestions for inclusion here are welcome! Some of the following
 % is concerned with code, and some with coding style.
@@ -845,11 +845,10 @@
 %   \item \pkg{expl3} is mainly focused on programming. This means that
 %     some areas still require the use of \LaTeXe{} internal macros.
 %     For example, you may well need \tn{@ifpackageloaded}, as there
-%     is currently no native \LaTeX3 package loading module.
+%     is currently no native \pkg{expl3} package loading module.
 %   \item User level macros should be generated using the mechanism
 %     available in the \pkg{xparse} package, which is part of the
-%     \texttt{l3package} bundle, available from CTAN or the \LaTeX3 SVN
-%     repository.
+%     \texttt{l3package} bundle.
 %   \item At an internal level, most functions should be generated
 %     \tn{long} (using \cs{cs_new:Npn}) rather than \enquote{short} (using
 %     \cs{cs_new_nopar:Npn}).
@@ -894,7 +893,7 @@
 % updated in time.
 %
 % \DescribeOption{check-declarations}
-% All variables used in \LaTeX3 code should be declared. This is enforced
+% All variables used in \pkg{expl3} code should be declared. This is enforced
 % by \TeX{} for variable types based on \TeX{} registers, but not for those
 % which are constructed using macros as the underlying storage system. The
 % \texttt{check-declarations} option enables checking for all variable
@@ -907,7 +906,7 @@
 % function name in the \texttt{.log} file. This is useful for debugging
 % purposes, as it means that there is a complete list of all functions
 % created by each module loaded (with the exceptions of a very small number
-% required by the bootstrap code for \LaTeX3).  See also \cs{debug_on:n}
+% required by the bootstrap code).  See also \cs{debug_on:n}
 % \texttt{\{log-functions\}} in \pkg{l3candidates} for finer control.
 %
 % \DescribeOption{enable-debug}
