Add :nn and update documentation

--- a/l3kernel/l3file.dtx
+++ b/l3kernel/l3file.dtx
@@ -3546,6 +3546,8 @@
 % \subsection{Checking the version of kernel dependencies}
 %
 % \begin{macro}{\__kernel_dependency_version_check:Nn}
+% \begin{macro}{\__kernel_dependency_version_check:nn}
+% \begin{macro}{\@@_kernel_dependency_compare:nnn,\@@_parse_version:w}
 %   This function is responsible for checking if dependencies of the
 %   \LaTeX3 kernel match the version preloaded in the \LaTeXe{} kernel.
 %   If versions don't match, the function attempts to tell why by
@@ -3558,8 +3560,8 @@
 %   the required date, it's an error and the loading should abort.
 %    \begin{macrocode}
 \cs_new_protected:Npn \__kernel_dependency_version_check:Nn #1
-  { \exp_args:NV \@@_kernel_dependency_compare:nn #1 }
-\cs_new_protected:Npn \@@_kernel_dependency_compare:nn #1
+  { \exp_args:NV \__kernel_dependency_version_check:nn #1 }
+\cs_new_protected:Npn \__kernel_dependency_version_check:nn #1
   {
     \cs_if_exist:NTF \c__kernel_expl_date_tl
       {
@@ -3661,6 +3663,8 @@
     \tex_endinput:D
   }
 %    \end{macrocode}
+% \end{macro}
+% \end{macro}
 % \end{macro}
 % \end{macro}
 %
