--- a/l3kernel/l3kernel-functions.dtx
+++ b/l3kernel/l3kernel-functions.dtx
@@ -101,12 +101,16 @@
 %   the \meta{follow-on}.
 % \end{function}
 %
-% \begin{function}{\__kernel_dependency_version_check:Nn}
+% \begin{function}{
+%     \__kernel_dependency_version_check:Nn,
+%     \__kernel_dependency_version_check:nn,
+%   }
 %   \begin{syntax}
-%     \cs{__kernel_dependency_version_check:Nn} \Arg{\cs{release}} \Arg{file}
+%     \cs{__kernel_dependency_version_check:Nn} \Arg{\cs{date}} \Arg{file}
+%     \cs{__kernel_dependency_version_check:nn} \Arg{date} \Arg{file}
 %   \end{syntax}
-%   Checks if the \meta{file}, dated \meta{release} has the same release date as
-%   the \pkg{l3kernel} preloaded in \LaTeXe{}.  If the dates don't match, the
+%   Checks if the loaded version of the \pkg{expl3} kernel is at least \meta{date},
+%   required by \meta{file}.  If the kernel date is older than \meta{date}, the
 %   loading of \meta{file} is aborted and an error is raised.
 % \end{function}
 %
