Use manually set minimal date

--- a/l3backend/l3backend-basics.dtx
+++ b/l3backend/l3backend-basics.dtx
@@ -69,26 +69,25 @@
 % place in the files.
 %    \begin{macrocode}
 %<*package>
-\def\ExplBackendFileDate{2020-06-29}
 \ProvidesExplFile
 %<*dvipdfmx>
-  {l3backend-dvipdfmx.def}{\ExplBackendFileDate}{}
+  {l3backend-dvipdfmx.def}{2020-06-29}{}
   {L3 backend support: dvipdfmx}
 %</dvipdfmx>
 %<*dvips>
-  {l3backend-dvips.def}{\ExplBackendFileDate}{}
+  {l3backend-dvips.def}{2020-06-29}{}
   {L3 backend support: dvips}
 %</dvips>
 %<*dvisvgm>
-  {l3backend-dvisvgm.def}{\ExplBackendFileDate}{}
+  {l3backend-dvisvgm.def}{2020-06-29}{}
   {L3 backend support: dvisvgm}
 %</dvisvgm>
 %<*pdfmode>
-  {l3backend-pdfmode.def}{\ExplBackendFileDate}{}
+  {l3backend-pdfmode.def}{2020-06-29}{}
   {L3 backend support: PDF mode}
 %</pdfmode>
 %<*xdvipdfmx>
-  {l3backend-xdvipdfmx.def}{\ExplBackendFileDate}{}
+  {l3backend-xdvipdfmx.def}{2020-06-29}{}
   {L3 backend support: xdvipdfmx}
 %</xdvipdfmx>
 %    \end{macrocode}
@@ -100,9 +99,9 @@
 %   With time, this test should vanish and only the dependency check
 %   should remain.
 %    \begin{macrocode}
-\cs_if_exist:NTF \__kernel_dependency_version_check:Nn
+\cs_if_exist:NTF \__kernel_dependency_version_check:nn
   {
-    \__kernel_dependency_version_check:Nn \ExplBackendFileDate
+    \__kernel_dependency_version_check:nn {2020-06-29}
 %<dvipdfmx>      {l3backend-dvipdfmx.def}
 %<dvips>      {l3backend-dvips.def}
 %<dvisvgm>      {l3backend-dvisvgm.def}
