--- a/l3backend/l3backend-color.dtx
+++ b/l3backend/l3backend-color.dtx
@@ -115,9 +115,9 @@
 %     \@@_backend_select:n
 %   }
 % \begin{macro}{\@@_backend_reset:}
-% \begin{macro}{color.fc}
-%    Push the data to the stack. In the case of \texttt{dvips} also reset the
-%    drawing fill color in raw PostScript.
+% \begin{macro}{color.sc, color.fc}
+%    Push the data to the stack. In the case of \texttt{dvips} also saves the
+%    drawing color in raw PostScript.
 %    \begin{macrocode}
 \cs_new_protected:Npn \@@_backend_cmyk:n #1
   { \@@_backend_select:n { cmyk ~ #1 } }
@@ -131,7 +131,8 @@
   {
     \__kernel_backend_literal:n { color~push~ #1 }
 %<*dvips>
-    \__kernel_backend_postscript:n { /color.fc~{ }~def }
+    \__kernel_backend_postscript:n { /color.sc~ { ~ } ~def }
+    \__kernel_backend_postscript:n { /color.fc~ { ~ } ~def }
 %</dvips>
     \group_insert_after:N \@@_backend_reset:
   }
@@ -207,25 +208,25 @@
 %
 % \begin{macro}
 %   {
-%     \@@_backend_cmyk:n ,
-%     \@@_backend_gray:n ,
-%     \@@_backend_rgb:n  ,
-%     \@@_backend_spot:n
+%     \@@_backend_select_cmyk:n ,
+%     \@@_backend_select_gray:n ,
+%     \@@_backend_select_rgb:n  ,
+%     \@@_backend_select_spot:n
 %   }
-% \begin{macro}{\@@_backend_spot:w}
+% \begin{macro}{\@@_backend_select_spot:w}
 % \begin{macro}{\@@_backend_select:n}
-% \begin{macro}{\@@_backend_reset:}
+% \begin{macro}{\@@_backend_select_reset:}
 %   Simply dump the data, but allowing for \LuaTeX{}.
 %    \begin{macrocode}
-\cs_new_protected:Npn \@@_backend_cmyk:n #1
+\cs_new_protected:Npn \@@_backend_select_cmyk:n #1
   { \@@_backend_select:n { #1 ~ k ~ #1 ~ K } }
-\cs_new_protected:Npn \@@_backend_gray:n #1
+\cs_new_protected:Npn \@@_backend_select_gray:n #1
   { \@@_backend_select:n { #1 ~ g ~ #1 ~ G } }
-\cs_new_protected:Npn \@@_backend_rgb:n #1
+\cs_new_protected:Npn \@@_backend_select_rgb:n #1
   { \@@_backend_select:n { #1 ~ rg ~ #1 ~ RG } }
-\cs_new_protected:Npn \@@_backend_spot:n #1
+\cs_new_protected:Npn \@@_backend_select_spot:n #1
   { \@@_backend_spot:w #1 \s_@@_stop }
-\cs_new_protected:Npn \@@_backend_spot:w #1 ~ #2 \s_@@_stop
+\cs_new_protected:Npn \@@_backend_select_spot:w #1 ~ #2 \s_@@_stop
   { \@@_backend_select:n { /#1 ~ cs ~ /#1 ~ CS ~ #2 ~ scn ~ #2 ~ SCN } }
 \cs_new_protected:Npx \@@_backend_select:n #1
   {
@@ -233,9 +234,9 @@
       { \tex_pdfextension:D colorstack }
       { \tex_pdfcolorstack:D }
         \exp_not:N \l__kernel_color_stack_int push {#1}
-      \group_insert_after:N \exp_not:N \@@_backend_reset:
+      \group_insert_after:N \exp_not:N \@@_backend_select_reset:
   }
-\cs_new_protected:Npx \@@_backend_reset:
+\cs_new_protected:Npx \@@_backend_select_reset:
   {
     \cs_if_exist:NTF \tex_pdfextension:D
       { \tex_pdfextension:D colorstack }
@@ -247,9 +248,188 @@
 % \end{macro}
 % \end{macro}
 % \end{macro}
+% \end{macro}
 %
 %    \begin{macrocode}
 %</pdfmode>
+%    \end{macrocode}
+%
+% \subsection{Fill and stroke color}
+%
+% Here, \texttt{(x)dvipdfmx} follows \texttt{pdfmode}, while for \texttt{dvips}
+% we have to manage fill and stroke color ourselves. We also handle
+% \texttt{dvisvgm} independently, as there we can create SVG directly.
+%
+%    \begin{macrocode}
+%<*dvipdfmx|pdfmode|xdvipdfmx>
+%    \end{macrocode}
+%
+% \begin{macro}
+%   {
+%     \@@_backend_fill_cmyk:n   ,
+%     \@@_backend_fill_gray:n   ,
+%     \@@_backend_fill_rgb:n    ,
+%     \@@_backend_stroke_cmyk:n ,
+%     \@@_backend_stroke_gray:n ,
+%     \@@_backend_stroke_rgb:n
+%   }
+%   Drawing (fill/stroke) color is handled in \texttt{(x)dvipdfmx} in the
+%   same way as \texttt{pdfmode}. We use the same approach as earlier, except the
+%   color stack is not involved so the generic direct PDF operation is used.
+%   There is no worry about the nature of strokes: everything is handled
+%   automatically.
+%    \begin{macrocode}
+\cs_new_protected:Npn \@@_backend_fill_cmyk:n #1
+  { \__kernel_backend_literal_pdf:n { #1 ~ k } }
+\cs_new_protected:Npn \@@_backend_fill_gray:n #1
+  { \__kernel_backend_literal_pdf:n { #1 ~ g } }
+\cs_new_protected:Npn \@@_backend_fill_rgb:n #1
+  { \__kernel_backend_literal_pdf:n { #1 ~ rg } }
+  \cs_new_protected:Npn \@@_backend_stroke_cmyk:n #1
+  { \__kernel_backend_literal_pdf:n { #1 ~ K } }
+\cs_new_protected:Npn \@@_backend_stroke_gray:n #1
+  { \__kernel_backend_literal_pdf:n { #1 ~ G } }
+\cs_new_protected:Npn \@@_backend_stroke_rgb:n #1
+  { \__kernel_backend_literal_pdf:n { #1 ~ RG } }
+%    \end{macrocode}
+%
+%    \begin{macrocode}
+%</dvipdfmx|pdfmode|xdvipdfmx>
+%    \end{macrocode}
+%
+%    \begin{macrocode}
+%<*dvips>
+%    \end{macrocode}
+%
+% \begin{macro}
+%   {
+%     \@@_backend_fill_cmyk:n   ,
+%     \@@_backend_fill_gray:n   ,
+%     \@@_backend_fill_rgb:n    ,
+%     \@@_backend_stroke_cmyk:n ,
+%     \@@_backend_stroke_gray:n ,
+%     \@@_backend_stroke_rgb:n
+%   }
+%   All questions of saving the non-stacked data.
+%    \begin{macrocode}
+\cs_new_protected:Npn \@@_backend_fill_cmyk:n #1
+  { \__kernel_backend_postscript:n { /color.fc { #1 ~ setcmykcolor } def } }
+\cs_new_protected:Npn \@@_backend_fill_gray:n #1
+  { \__kernel_backend_postscript:n { /color.fc { #1 ~ setgray } def } }
+\cs_new_protected:Npn \@@_backend_fill_rgb:n #1
+  { \__kernel_backend_postscript:n { /color.fc { #1 ~ setrgbcolor } def } }
+  \cs_new_protected:Npn \@@_backend_stroke_cmyk:n #1
+  { \__kernel_backend_postscript:n { /color.sc { #1 ~ setcmykcolor } def } }
+\cs_new_protected:Npn \@@_backend_stroke_gray:n #1
+  { \__kernel_backend_postscript:n { /color.sc { #1 ~ setgray } def } }
+\cs_new_protected:Npn \@@_backend_stroke_rgb:n #1
+  { \__kernel_backend_postscript:n { /color.sc { #1 ~ setrgbcolor } def } }
+%    \end{macrocode}
+%
+%    \begin{macrocode}
+%</dvips>
+%    \end{macrocode}
+%
+%    \begin{macrocode}
+%<*dvisvgm>
+%    \end{macrocode}
+%
+% \begin{macro}
+%   {
+%     \@@_backend_fill_cmyk:n   ,
+%     \@@_backend_stroke_cmyk:n
+%   }
+% \begin{macro}{\@@_backend_cmyk:nw}
+% \begin{macro}
+%   {
+%     \@@_backend_fill_gray:n   ,
+%     \@@_backend_stroke_gray:n
+%   }
+% \begin{macro}{\@@_backend_gray:nn, \@@_backend_gray_aux:n}
+% \begin{macro}
+%   {
+%     \@@_backend_fill_rgb:n   ,
+%     \@@_backend_stroke_rgb:n
+%   }
+% \begin{macro}{\@@_backend_rgb:nw}
+% \begin{macro}{\@@_backend:nnnn}
+%   For drawings in SVG, we use scopes for all colors. That
+%   requires using \texttt{RGB} values, which luckily are easy to
+%   convert here (|cmyk| to |RGB| is a fixed function).
+%    \begin{macrocode}
+\cs_new_protected:Npn \@@_backend_fill_cmyk:n #1
+  { \@@_backend_cmyk:nw { fill } #1 \s_@@_stop }
+\cs_new_protected:Npn \@@_backend_stroke_cmyk:n #1
+  { \@@_backend_cmyk:nw { stroke } #1 \s_@@_stop }
+\cs_new_protected:Npn \@@_backend_cmyk:nw
+  #1#2 ~ #3 ~ #4 ~ #5 \s_@@_stop
+  {
+    \use:x
+      {
+        \@@_backend:nnnn
+          {#1}
+          { \fp_eval:n { -100 * ( 1 - min ( 1 , #2 + #5 ) ) } }
+          { \fp_eval:n { -100 * ( 1 - min ( 1 , #3 + #5 ) ) } }
+          { \fp_eval:n { -100 * ( 1 - min ( 1 , #4 + #5 ) ) } }
+      }
+  }
+\cs_new_protected:Npn \@@_backend_fill_gray:n #1
+  { \@@_backend_grab:nn { fill } {#1} }
+\cs_new_protected:Npn \@@_backend_stroke_gray:n #1
+  { \@@_backend_grab:nn { stroke } {#1} }
+\cs_new_protected:Npn \@@_backend_gray:nn #1#2
+  {
+    \use:x
+      {
+        \@@_backend_gray_aux:nn
+          {#1}
+          { \fp_eval:n { 100 * (#2) } }
+      }
+  }
+\cs_new_protected:Npn \@@_backend_gray_aux:nn #1#2
+  { \@@_backend:nnn {#1} {#2} {#2} {#2} }
+\cs_new_protected:Npn \@@_backend_fill_rgb:n #1
+  { \@@_backend_rgb:nw { fill } #1 \s_@@_stop }
+\cs_new_protected:Npn \@@_backend_stroke_rgb:n #1
+  { \@@_backend_rgb:nw { stroke } #1 \s_@@_stop }
+\cs_new_protected:Npn \@@_backend_rgb:nw
+  #1#2 ~ #3 ~ #4\s_@@_stop
+  {
+    \use:x
+      {
+        \@@_backend:nnnn
+          { fill }
+          { \fp_eval:n { 100 * (#2) } }
+          { \fp_eval:n { 100 * (#3) } }
+          { \fp_eval:n { 100 * (#4) } }
+      }
+  }
+\cs_new_protected:Npx \@@_backend:nnnn #1#2#3#4
+  {
+    \@@_backend_scope:n
+      {
+        #1 =
+         "
+           rgb
+             (
+               #2 \c_percent_str ,
+               #3 \c_percent_str ,
+               #4 \c_percent_str
+             )
+         "
+      }
+  }
+%    \end{macrocode}
+% \end{macro}
+% \end{macro}
+% \end{macro}
+% \end{macro}
+% \end{macro}
+% \end{macro}
+% \end{macro}
+%
+%    \begin{macrocode}
+%</dvisvgm>
 %    \end{macrocode}
 %
 %    \begin{macrocode}
