--- a/l3experimental/l3draw/l3draw-scopes.dtx
+++ b/l3experimental/l3draw/l3draw-scopes.dtx
@@ -132,7 +132,7 @@
         \draw_transform_shift_reset:
         \@@_softpath_clear:
         \draw_linewidth:n { \l_draw_default_linewidth_dim }
-        \draw_color:n { . }
+        \color_select:n { . }
         \draw_nonzero_rule:
         \draw_cap_butt:
         \draw_join_miter:
