--- a/l3kernel/l3color-base.dtx
+++ b/l3kernel/l3color-base.dtx
@@ -162,7 +162,7 @@
 \cs_new_protected:Npn \@@_select:N #1
   { \exp_after:wN \@@_select:nn #1 }
 \cs_new_protected:Npn \@@_select:nn #1#2
-  { \use:c { @@_backend_ #1 :n } {#2} }
+  { \use:c { @@_backend_select_ #1 :n } {#2} }
 %    \end{macrocode}
 % \end{macro}
 % \end{macro}
