Move SVG scope operations to backend-basics
They are needed by both color and drawing.

--- a/l3backend/l3backend-box.dtx
+++ b/l3backend/l3backend-box.dtx
@@ -387,12 +387,12 @@
             scale ( 1 , -1 )
           "
       }
-    \__kernel_backend_scope_begin:x
+    \__kernel_backend_scope:x
       {
         clip-path =
           "url ( \c_hash_str l3cp \int_use:N \g_@@_clip_path_int ) "
       }
-    \__kernel_backend_scope_begin:n
+    \__kernel_backend_scope:n
       {
         transform =
           "
@@ -403,9 +403,6 @@
       }
     \box_use:N #1
     \__kernel_backend_scope_end:
-    \__kernel_backend_scope_end:
-    \__kernel_backend_scope_end:
-%    \skip_horizontal:n { \box_wd:N #1 }
   }
 \int_new:N \g_@@_clip_path_int
 %    \end{macrocode}
