Various \end{macro} fixes

--- a/l3backend/l3backend-basics.dtx
+++ b/l3backend/l3backend-basics.dtx
@@ -414,6 +414,8 @@
 \cs_generate_variant:Nn \__kernel_backend_scope:n { x }
 %    \end{macrocode}
 % \end{macro}
+% \end{macro}
+% \end{macro}
 %
 %    \begin{macrocode}
 %</dvisvgm>
