Drop IniTeX guards from l3trial
Reminds me we should look again at some of these!

--- a/l3trial/xfont/xfss.dtx
+++ b/l3trial/xfont/xfss.dtx
@@ -1,6 +1,6 @@
 % \iffalse
 %
-%% File xfss.dtx Copyright (C) 2011,2012,2013,2015-2019 The LaTeX3 Project
+%% File xfss.dtx Copyright (C) 2011,2012,2013,2015-2020 The LaTeX3 Project
 %%
 %% It may be distributed and/or modified under the conditions of the
 %% LaTeX Project Public License (LPPL), either version 1.3c of this
@@ -147,7 +147,7 @@
 % \LaTeXe, overriding the NFSS, or in a standalone \LaTeX3 kernel.
 %
 %    \begin{macrocode}
-%<*package|initex>
+%<*package>
 %    \end{macrocode}
 %
 %    \begin{macrocode}
@@ -163,9 +163,7 @@
 % \ExecuteOptions{clean,compat}% uncomment when it's working!
 \ProcessOptions
 
-%<*package>
 \makeatletter
-%</package>
 %    \end{macrocode}
 %
 % \subsection{l3font candidates}
@@ -187,12 +185,7 @@
 %     \cs{c_max_math_fonts_int}? Are math groups and math fonts
 %     the same concept?}
 %    \begin{macrocode}
-%<*package>
 \cs_new_eq:NN \mathgroup_new:N \new@mathgroup
-%</package>
-%<*initex>
-\__alloc_new:nnnN {mathgroup} { 0 } { 16 } \tex_chardef:D
-%</initex>
 \cs_generate_variant:Nn \mathgroup_new:N {c}
 %    \end{macrocode}
 % \end{macro}
@@ -1997,15 +1990,9 @@
   }
 %    \end{macrocode}
 %
-% fixme: what to do in initex?
 %    \begin{macrocode}
-%<*package>
 \tl_new:N \l_no_accents_tl
 \tl_set_eq:NN \l_no_accents_tl \noaccents@
-%</package>
-%<*initex>
-\tl_new:N \l_no_accents_tl
-%</initex>
 %    \end{macrocode}
 %
 % \begin{macro}{\math_operator_font:}
@@ -3430,12 +3417,11 @@
 %    \end{macrocode}
 %
 %
-% When used in \LaTeXe, extract the font size from \cs{normalsize}
+% Extract the font size from \cs{normalsize}
 % and replace the font changing commands with \pkg{xfss} methods.
 % Note that \cs{small}, etc., no longer contain alterations to list settings,
 % and so on.
 %    \begin{macrocode}
-%<*!initex>
 \cs_new:Npn \xfss_extract_normalsize:
   {
     \exp_after:wN \xfss_extract_size_aux:Nnnw
@@ -3447,7 +3433,6 @@
     \exp_args:Nx \xfss_set_font_size_commands:n
       {\xfss_extract_normalsize:}
   }
-%</!initex>
 %    \end{macrocode}
 %
 %
@@ -3605,7 +3590,7 @@
 % \end{macro}
 %
 %    \begin{macrocode}
-%</package|initex>
+%</package>
 %    \end{macrocode}
 %
 % \end{implementation}
