--- a/l3trial/l3fp-extras/l3fp-functions.dtx
+++ b/l3trial/l3fp-extras/l3fp-functions.dtx
@@ -1,6 +1,6 @@
 % \iffalse
 %
-%% File l3fp-functions.dtx (C) Copyright 2012-2018 The LaTeX3 Project
+%% File l3fp-functions.dtx (C) Copyright 2012-2018,2020 The LaTeX3 Project
 %
 % It may be distributed and/or modified under the conditions of the
 % LaTeX Project Public License (LPPL), either version 1.3c of this
@@ -58,7 +58,7 @@
 % \section{\pkg{l3fp-functions} implementation}
 %
 %    \begin{macrocode}
-%<*initex|package>
+%<*package>
 %    \end{macrocode}
 %
 %    \begin{macrocode}
@@ -375,7 +375,7 @@
 %    \end{macrocode}
 %
 %    \begin{macrocode}
-%</initex|package>
+%</package>
 %    \end{macrocode}
 %
 % \end{implementation}
