--- a/l3trial/l3fp-extras/l3fp-types.dtx
+++ b/l3trial/l3fp-extras/l3fp-types.dtx
@@ -1,6 +1,6 @@
 % \iffalse
 %
-%% File l3fp-types.dtx (C) Copyright 2012-2015,2017,2018 The LaTeX3 Project
+%% File l3fp-types.dtx (C) Copyright 2012-2015,2017,2018,2020 The LaTeX3 Project
 %
 % It may be distributed and/or modified under the conditions of the
 % LaTeX Project Public License (LPPL), either version 1.3c of this
@@ -58,7 +58,7 @@
 % \section{\pkg{l3fp-types} implementation}
 %
 %    \begin{macrocode}
-%<*initex|package>
+%<*package>
 %    \end{macrocode}
 %
 %    \begin{macrocode}
@@ -310,7 +310,7 @@
 % |max|, |?:|, |round|, |atan|, |acot|.
 %
 %    \begin{macrocode}
-%</initex|package>
+%</package>
 %    \end{macrocode}
 %
 % \end{implementation}
