--- a/l3trial/xbox/xbox.dtx
+++ b/l3trial/xbox/xbox.dtx
@@ -1,6 +1,6 @@
 % \iffalse meta-comment
 %
-%% File: xbox.dtx Copyright(C) 2012-2018 The LaTeX3 Project
+%% File: xbox.dtx Copyright(C) 2012-2018,2020 The LaTeX3 Project
 %%
 %% It may be distributed and/or modified under the conditions of the
 %% LaTeX Project Public License (LPPL), either version 1.3c of this
@@ -421,7 +421,7 @@
 % \section{\pkg{xbox} implementation}
 %
 %    \begin{macrocode}
-%<*initex|package>
+%<*package>
 %    \end{macrocode}
 %
 %    \begin{macrocode}
@@ -840,14 +840,6 @@
 %
 % \begin{variable}{\fboxsep, \fboxrule}
 %
-%    \begin{macrocode}
-%<*initex>
-\dim_new:N \fboxsep
-\dim_new:N \fboxrule
-%</initex>
-%    \end{macrocode}
-% \end{variable}
-%
 % \begin{macro}{\fbox}
 %   Simply frame up material: no need to do anything complex.
 %    \begin{macrocode}
@@ -1069,7 +1061,7 @@
 %    \end{macrocode}
 %
 %    \begin{macrocode}
-%</initex|package>
+%</package>
 %    \end{macrocode}
 %
 % \end{implementation}
