--- a/l3trial/xfont/xfss-setup.dtx
+++ b/l3trial/xfont/xfss-setup.dtx
@@ -1,5 +1,5 @@
 % \iffalse
-%% File: xfss-setup.dtx Copyright (C) 2011-2012,2017 LaTeX3 project
+%% File: xfss-setup.dtx Copyright (C) 2011-2012,2017,2020 LaTeX3 project
 %%
 %% It may be distributed and/or modified under the conditions of the
 %% LaTeX Project Public License (LPPL), either version 1.3c of this
@@ -60,7 +60,7 @@
 % \section{\pkg{xfss-setup}}
 %
 %    \begin{macrocode}
-%<*package|initex>
+%<*package>
 %    \end{macrocode}
 %
 %    \begin{macrocode}
@@ -408,7 +408,7 @@
 %    \end{macrocode}
 %
 %    \begin{macrocode}
-%</package|initex>
+%</package>
 %    \end{macrocode}
 %
 % \end{implementation}
