Drop IniTeX guards from l3kernel
There's a bit more to this than the other related
commits, but the basic idea is the same.

--- a/l3kernel/l3basics.dtx
+++ b/l3kernel/l3basics.dtx
@@ -1339,7 +1339,7 @@
 % \section{\pkg{l3basics} implementation}
 %
 %    \begin{macrocode}
-%<*initex|package>
+%<*package>
 %    \end{macrocode}
 %
 % \subsection{Renaming some \TeX{} primitives (again)}
@@ -3277,7 +3277,7 @@
 % \end{macro}
 %
 %    \begin{macrocode}
-%</initex|package>
+%</package>
 %    \end{macrocode}
 %
 % \end{implementation}
