--- a/l3kernel/l3luatex.dtx
+++ b/l3kernel/l3luatex.dtx
@@ -216,7 +216,7 @@
 % \section{\pkg{l3luatex} implementation}
 %
 %    \begin{macrocode}
-%<*initex|package>
+%<*package>
 %    \end{macrocode}
 %
 % \subsection{Breaking out to \Lua{}}
@@ -556,43 +556,12 @@ l3kernel.shellescape = shellescape
 %    \end{macrocode}
 % \end{macro}
 %
-% \subsection{Generic \Lua{} and font support}
-%
-%    \begin{macrocode}
-%<*initex>
-%    \end{macrocode}
-%
-%    \begin{macrocode}
-%<@@=alloc>
-%    \end{macrocode}
-%
-% A small amount of generic code is used by almost all \LuaTeX{} material so
-% needs to be loaded by the format.
-%    \begin{macrocode}
-attribute_count_name = "g_@@_attribute_int"
-bytecode_count_name  = "g_@@_bytecode_int"
-chunkname_count_name = "g_@@_chunkname_int"
-whatsit_count_name   = "g_@@_whatsit_int"
-require("ltluatex")
-%    \end{macrocode}
-%
-% With the above available the font loader code used by plain \TeX{} and
-% \LaTeXe{} when used with \LuaTeX{} can be loaded here. This is thus being
-% treated more-or-less as part of the engine itself.
-%    \begin{macrocode}
-require("luaotfload-main")
-local _void = luaotfload.main()
-%    \end{macrocode}
-%    \begin{macrocode}
-%</initex>
-%    \end{macrocode}
-%
 %    \begin{macrocode}
 %</lua>
 %    \end{macrocode}
 %
 %    \begin{macrocode}
-%</initex|package>
+%</package>
 %    \end{macrocode}
 %
 %\end{implementation}
