--- a/l3kernel/l3msg.dtx
+++ b/l3kernel/l3msg.dtx
@@ -564,7 +564,7 @@
 % \section{\pkg{l3msg} implementation}
 %
 %    \begin{macrocode}
-%<*initex|package>
+%<*package>
 %    \end{macrocode}
 %
 %    \begin{macrocode}
@@ -1395,7 +1395,7 @@
 %    \begin{macrocode}
 \cs_new_protected:Npn \@@_use:nnnnnnn #1#2#3#4#5#6#7
   {
-%<package>    \cs_if_exist_use:N \conditionally@traceoff
+    \cs_if_exist_use:N \conditionally@traceoff
     \msg_if_exist:nnTF {#2} {#3}
       {
         \@@_class_chk_exist:nT {#1}
@@ -1413,7 +1413,7 @@
           }
       }
       { \__kernel_msg_error:nnxx { kernel } { message-unknown } {#2} {#3} }
-%<package>    \cs_if_exist_use:N \conditionally@traceon
+    \cs_if_exist_use:N \conditionally@traceon
   }
 \cs_new_protected:Npn \@@_use_code: { }
 %    \end{macrocode}
@@ -2223,7 +2223,7 @@
 % \end{macro}
 %
 %    \begin{macrocode}
-%</initex|package>
+%</package>
 %    \end{macrocode}
 %
 % \end{implementation}
