--- a/l3kernel/l3prg.dtx
+++ b/l3kernel/l3prg.dtx
@@ -770,7 +770,7 @@
 % \TestFiles{m3prg001.lvt,m3prg002.lvt,m3prg003.lvt}
 %
 %    \begin{macrocode}
-%<*initex|package>
+%<*package>
 %    \end{macrocode}
 %
 % \subsection{Primitive conditionals}
@@ -1648,13 +1648,12 @@
 %
 % \begin{macro}{\prg_break_point:}
 % \begin{macro}{\prg_break:, \prg_break:n}
-%   Also done in \pkg{l3basics} as in format mode these are needed within
-%   \pkg{l3alloc}.
+%   Also done in \pkg{l3basics}.
 % \end{macro}
 % \end{macro}
 %
 %    \begin{macrocode}
-%</initex|package>
+%</package>
 %    \end{macrocode}
 %
 % \end{implementation}
