--- a/l3kernel/l3prop.dtx
+++ b/l3kernel/l3prop.dtx
@@ -525,7 +525,7 @@
 % \TestFiles{m3prop001, m3prop002, m3prop003, m3prop004, m3show001}
 %
 %    \begin{macrocode}
-%<*initex|package>
+%<*package>
 %    \end{macrocode}
 %
 %    \begin{macrocode}
@@ -1369,7 +1369,7 @@
 % \end{macro}
 %
 %    \begin{macrocode}
-%</initex|package>
+%</package>
 %    \end{macrocode}
 %
 % \end{implementation}
