--- a/l3kernel/l3regex.dtx
+++ b/l3kernel/l3regex.dtx
@@ -811,7 +811,7 @@
 % \section{\pkg{l3regex} implementation}
 %
 %    \begin{macrocode}
-%<*initex|package>
+%<*package>
 %    \end{macrocode}
 %
 %    \begin{macrocode}
@@ -6716,7 +6716,7 @@
 % \end{macro}
 %
 %    \begin{macrocode}
-%</initex|package>
+%</package>
 %    \end{macrocode}
 %
 % \end{implementation}
