--- a/l3kernel/l3sys.dtx
+++ b/l3kernel/l3sys.dtx
@@ -300,7 +300,7 @@
 % \subsection{Kernel code}
 %
 %    \begin{macrocode}
-%<*initex|package>
+%<*package>
 %    \end{macrocode}
 %
 % \subsubsection{Detecting the engine}
@@ -874,7 +874,7 @@
 % \end{variable}
 %
 %    \begin{macrocode}
-%</initex|package>
+%</package>
 %    \end{macrocode}
 %
 %\end{implementation}
