--- a/l3kernel/l3debug.dtx
+++ b/l3kernel/l3debug.dtx
@@ -119,7 +119,7 @@
 % \section{\pkg{l3debug} Implementation}
 %
 %    \begin{macrocode}
-%<*initex|package>
+%<*package>
 %    \end{macrocode}
 %
 %    \begin{macrocode}
@@ -1476,7 +1476,7 @@
 % \end{macro}
 %
 %    \begin{macrocode}
-%</initex|package>
+%</package>
 %    \end{macrocode}
 %
 % \end{implementation}
