--- a/l3kernel/l3expan.dtx
+++ b/l3kernel/l3expan.dtx
@@ -937,7 +937,7 @@
 % \section{\pkg{l3expan} implementation}
 %
 %    \begin{macrocode}
-%<*initex|package>
+%<*package>
 %    \end{macrocode}
 %
 %    \begin{macrocode}
@@ -2909,7 +2909,7 @@
 % \end{macro}
 %
 %    \begin{macrocode}
-%</initex|package>
+%</package>
 %    \end{macrocode}
 %
 % \end{implementation}
