--- a/l3kernel/l3flag.dtx
+++ b/l3kernel/l3flag.dtx
@@ -159,7 +159,7 @@
 % \section{\pkg{l3flag} implementation}
 %
 %    \begin{macrocode}
-%<*initex|package>
+%<*package>
 %    \end{macrocode}
 %
 %    \begin{macrocode}
@@ -300,7 +300,7 @@
 % \end{macro}
 %
 %    \begin{macrocode}
-%</initex|package>
+%</package>
 %    \end{macrocode}
 %
 % \end{implementation}
