--- a/l3kernel/l3keys.dtx
+++ b/l3kernel/l3keys.dtx
@@ -934,7 +934,7 @@
 % \section{\pkg{l3keys} Implementation}
 %
 %    \begin{macrocode}
-%<*initex|package>
+%<*package>
 %    \end{macrocode}
 %
 % \subsection{Low-level interface}
@@ -3145,7 +3145,7 @@
 %    \end{macrocode}
 %
 %    \begin{macrocode}
-%</initex|package>
+%</package>
 %    \end{macrocode}
 %
 %\end{implementation}
