--- a/l3kernel/l3text.dtx
+++ b/l3kernel/l3text.dtx
@@ -270,7 +270,7 @@
 % \section{\pkg{l3text} implementation}
 %
 %    \begin{macrocode}
-%<*initex|package>
+%<*package>
 %    \end{macrocode}
 %
 %    \begin{macrocode}
@@ -1055,7 +1055,7 @@
 % \end{macro}
 %
 %    \begin{macrocode}
-%</initex|package>
+%</package>
 %    \end{macrocode}
 %
 % \end{implementation}
