--- a/l3kernel/l3token.dtx
+++ b/l3kernel/l3token.dtx
@@ -1108,7 +1108,7 @@
 % \section{\pkg{l3token} implementation}
 %
 %    \begin{macrocode}
-%<*initex|package>
+%<*package>
 %    \end{macrocode}
 %
 %    \begin{macrocode}
@@ -2869,7 +2869,7 @@
 % \end{macro}
 %
 %    \begin{macrocode}
-%</initex|package>
+%</package>
 %    \end{macrocode}
 %
 % \end{implementation}
