Enable creation of new color models (#757)

--- a/l3backend/l3backend-color.dtx
+++ b/l3backend/l3backend-color.dtx
@@ -90,8 +90,8 @@
           {
             \tl_set:Nx #1
                {
-                 { spot }
-                 { \exp_after:wN \use:n \current@color \c_space_tl 1 }
+                 { \exp_after:wN \use:n \current@color }
+                 { 1 }
                }
           }
           {
@@ -111,7 +111,6 @@
 %     \@@_backend_select_cmyk:n  ,
 %     \@@_backend_select_gray:n  ,
 %     \@@_backend_select_rgb:n   ,
-%     \@@_backend_select_spot:n  ,
 %     \@@_backend_select:n
 %   }
 % \begin{macro}{\@@_backend_reset:}
@@ -125,8 +124,6 @@
   { \@@_backend_select:n { gray ~ #1 } }
 \cs_new_protected:Npn \@@_backend_select_rgb:n #1
   { \@@_backend_select:n { rgb ~ #1 } }
-\cs_new_protected:Npn \@@_backend_select_spot:n #1
-  { \@@_backend_select:n {#1} }
 \cs_new_protected:Npn \@@_backend_select:n #1
   {
     \__kernel_backend_literal:n { color~push~ #1 }
@@ -141,6 +138,13 @@
 %    \end{macrocode}
 % \end{macro}
 % \end{macro}
+% \end{macro}
+%
+% \begin{macro}{\@@_backend_select_separation:nn}
+%    \begin{macrocode}
+\cs_new_protected:Npn \@@_backend_select_separation:nn #1#2
+  { \@@_backend_select:n {#1} }
+%    \end{macrocode}
 % \end{macro}
 %
 %    \begin{macrocode}
@@ -184,7 +188,7 @@
                    {
                      \str_if_eq:nnTF {#2} { cs }
                        {
-                         \tl_set:Nx #7 { { spot } { \use_none:n #1 ~ #5 } }
+                         \tl_set:Nx #7 { { \use:n #1 } { #5 } }
                        }
                        {
                          \tl_set:Nn #7 { { gray } { 0 } }
@@ -210,11 +214,8 @@
 %   {
 %     \@@_backend_select_cmyk:n ,
 %     \@@_backend_select_gray:n ,
-%     \@@_backend_select_rgb:n  ,
-%     \@@_backend_select_spot:n
+%     \@@_backend_select_rgb:n
 %   }
-% \begin{macro}{\@@_backend_select_spot:w}
-% \begin{macro}{\@@_backend_select:n}
 % \begin{macro}{\@@_backend_reset:}
 %   Simply dump the data, but allowing for \LuaTeX{}.
 %    \begin{macrocode}
@@ -224,10 +225,6 @@
   { \@@_backend_select:n { #1 ~ g ~ #1 ~ G } }
 \cs_new_protected:Npn \@@_backend_select_rgb:n #1
   { \@@_backend_select:n { #1 ~ rg ~ #1 ~ RG } }
-\cs_new_protected:Npn \@@_backend_select_spot:n #1
-  { \@@_backend_spot:w #1 \s_@@_stop }
-\cs_new_protected:Npn \@@_backend_select_spot:w #1 ~ #2 \s_@@_stop
-  { \@@_backend_select:n { /#1 ~ cs ~ /#1 ~ CS ~ #2 ~ scn ~ #2 ~ SCN } }
 \cs_new_protected:Npx \@@_backend_select:n #1
   {
     \cs_if_exist:NTF \tex_pdfextension:D
@@ -246,7 +243,12 @@
 %    \end{macrocode}
 % \end{macro}
 % \end{macro}
-% \end{macro}
+%
+% \begin{macro}{\@@_backend_select_separation:nn}
+%    \begin{macrocode}
+\cs_new_protected:Npn \@@_backend_select_separation:nn #1#2
+  { \@@_backend_select:n { /#1 ~ cs ~ /#1 ~ CS ~ #2 ~ scn ~ #2 ~ SCN } }
+%    \end{macrocode}
 % \end{macro}
 %
 %    \begin{macrocode}
@@ -293,6 +295,19 @@
 %    \end{macrocode}
 % \end{macro}
 %
+% \begin{macro}
+%   {
+%     \@@_backend_fill_separation:nn,
+%     \@@_backend_stroke_separation:nn
+%   }
+%    \begin{macrocode}
+\cs_new_protected:Npn \@@_backend_fill_separation:nn #1#2
+  { \__kernel_backend_literal_pdf:n { /#1 ~ cs ~ #2 ~ scn } }
+\cs_new_protected:Npn \@@_backend_stroke_separation:nn #1#2
+  { \__kernel_backend_literal_pdf:n { /#1 ~ CS ~ #2 ~ SCN } }
+%    \end{macrocode}
+% \end{macro}
+%
 %    \begin{macrocode}
 %</dvipdfmx|pdfmode|xdvipdfmx>
 %    \end{macrocode}
@@ -324,6 +339,19 @@
   { \__kernel_backend_postscript:n { /color.sc { #1 ~ setgray } def } }
 \cs_new_protected:Npn \@@_backend_stroke_rgb:n #1
   { \__kernel_backend_postscript:n { /color.sc { #1 ~ setrgbcolor } def } }
+%    \end{macrocode}
+% \end{macro}
+%
+% \begin{macro}
+%   {
+%     \@@_backend_fill_separation:nn,
+%     \@@_backend_stroke_separation:nn
+%   }
+%    \begin{macrocode}
+\cs_new_protected:Npn \@@_backend_fill_separation:nn #1#2
+  { \__kernel_backend_postscript:n { /color.fc { #1 } def } }
+\cs_new_protected:Npn \@@_backend_stroke_separation:nn #1#2
+  { \__kernel_backend_postscript:n { /color.sc { #1 } def } }
 %    \end{macrocode}
 % \end{macro}
 %
@@ -427,6 +455,20 @@
 % \end{macro}
 % \end{macro}
 % \end{macro}
+% \end{macro}
+%
+% \begin{macro}
+%   {
+%     \@@_backend_fill_separation:nn,
+%     \@@_backend_stroke_separation:nn
+%   }
+%   At present, these are no-ops.
+%    \begin{macrocode}
+\cs_new_protected:Npn \@@_backend_fill_separation:nn #1#2
+  { }
+\cs_new_protected:Npn \@@_backend_stroke_separation:nn #1#2
+  { }
+%    \end{macrocode}
 % \end{macro}
 %
 %    \begin{macrocode}
